--- a/Task-2.ipynb
+++ b/Task-2.ipynb
@@ -19,6 +19,9 @@
         "id": "7IUWBbBi6M4E"
       },
       "source": [
+        "**Data Science and Business Analytics Task**"
+        "**Name: Anushka Bhadra**"
+        "**Task 2: Prediction using Unsupervised ML**"
         "**Importing all the libraries**"
       ]
     },
